app/style.css
/* disable selection/Copy of UIWebView */
/* disable the IOS popup when long-press on a link */
/*
*:not(input):not(textarea) {
  -webkit-user-select: none;
  -webkit-touch-callout: none;
}
*/

body {
  background: white;
  color: black;
}

/*pre {
  font-size: 1em;
  background: white;
}
*/
.drop-box {
  background: #F8F8F8;
  border: 2px dashed lightblue;
  width: 100%;
  height: 21px;
  text-align: center;
  line-height: 1em;
}

.dragover {
  border: 2px dashed blue;
}

/*
.InputRender {
  border:1px solid darkgray;
}

.InputRender svg {
  width: 100%;
  height: 100%;
}

.InputRender.zoom {
}

.InputRender.zoom svg {
  width: initial;
  height: initial;
}


.zoom-ul-button {
  position: absolute;
  z-index: 100;
}
*/

.btn-group-block {
  width: 100%;
}

.btn-group-menu-block {
  width: 330px;
}
.input-group-xs {
  height: 22px !important;
  max-height: 22px !important;
}

.input-group-button-xs {
  height: 22px !important;
  line-height: 10px;
  margin: 0 !important;
  padding: 1px 3px !important;
}

.CodeMirror {
  /* Set height, width, borders, and global font properties here */
  font-family: 'Ubuntu Mono', monospace;
  font-weight: 500;
  font-size: 16px;
  height: 100%;
  color: black;
  padding: 5px;
}


.split {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
  float: left;
}

.split.source-visible {
  xwidth: 50%;
}

.split.source-hidden {
  xwidth: 100%;
}

/*.gutter {
  background-color: transparent;
  background-repeat: no-repeat;
  background-position: 50%;
}
*/
.gutter.gutter-horizontal {
  cursor: ew-resize;
  height: 1000px;
  float: left;
  border:4px solid lightsteelblue;
  background: darkslateblue;
/*  background-repeat: repeat-y;
  background-image:  url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==')
*/
}


.modal-dialog {
  max-width: 80%;
}

@media (max-width: 560px) {
.modal-dialog {
  max-width: 100%;
}
}


.help-modal {
  background: rgb(250, 250, 255);
  font-size: 16px;
  font-weight: 500;
}

.help-modal code {
  font-family: 'Ubuntu Mono', monospace;
  font-weight: 500;
  font-size: inherit;
  color: black;
  background: white;
  padding: 3px;
  border:1px solid lightgray;
  border-radius: 1px;
}


div.container-fluid .row.control-panel {
  margin: 0;
  padding: 5px 0 2px 0;
  position: fixed;
  z-index: 1000;
  background:white;
  left: 0;
  top: 0;
  height: 70px;
  width: 100%;
}

div.container-fluid .row.smartdown-frame {
  background: #fafaff;
  margin-top: 70px;
}

.btn-group-xs > .btn,
.btn-xs {
  padding : .25rem .4rem;
  font-size : .95rem;
  line-height : .6;
  border-radius: .2rem;
}

.btn.btn-xs.btn-help {
  border: none !important;
}


/* BS4 Overrides */
.MathJax_Display svg {
  vertical-align: unset;
}

.smartdown-outer-container.source-visible {
  margin: 0;
}


.smartdown-container
.playable-wrapper-wrapper
.playable-wrapper.smartdown-playable-kiosk.playable-playing
.playable-buttons {
  top: 70px;
  left: 0;
  right: 0;
  margin: 0 12px;
}

.smartdown-container h1,
.smartdown-container h2,
.smartdown-container h3,
.smartdown-container h4,
.smartdown-container h5,
.smartdown-container h6
 {
  padding-top: 70px;
  margin-top: -70px;
}

